--- a/Transformations/filter_data.ipynb
+++ b/Transformations/filter_data.ipynb
@@ -2,28 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from Utils import paths, common_functions\n",
-    "import pandas as pd\n",
+    "import importlib\n",
+    "\n",
+    "import joblib\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "from Utils import paths\n",
+    "from Utils import transformation_utils as t_utils\n",
     "\n",
     "COLORS = ['#1f77b4', '#ff7f0e', '#2ca02c', '#d62728', '#9467bd', '#8c564b', '#e377c2', '#7f7f7f', '#bcbd22', '#17becf']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
       "text/plain": "((552, 21620), (552, 21620), (552,))"
      },
-     "execution_count": 47,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "before_dismissed = [1104, 1119, 1134, 1149, 1155, 1158, 1186, 1188, 1258, 1292, 1322,\n",
@@ -59,24 +67,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15 5 533 True\n",
-      "15 10 506 True\n",
-      "15 20 427 True\n",
-      "15 30 349 True\n",
-      "20 5 535 True\n",
-      "20 10 501 True\n",
-      "20 20 412 True\n",
-      "20 30 328 True\n",
-      "30 5 539 True\n",
-      "30 10 499 True\n",
-      "30 20 401 True\n",
-      "30 30 295 True\n"
+      "15 5 533 (552, 3600) (19, 3600) True\n",
+      "15 10 506 (552, 3600) (46, 3600) True\n",
+      "15 20 427 (552, 3600) (125, 3600) True\n",
+      "15 30 349 (552, 3600) (203, 3600) True\n",
+      "20 5 535 (552, 4800) (17, 4800) True\n",
+      "20 10 501 (552, 4800) (51, 4800) True\n",
+      "20 20 412 (552, 4800) (140, 4800) True\n",
+      "20 30 328 (552, 4800) (224, 4800) True\n",
+      "30 5 539 (552, 7200) (13, 7200) True\n",
+      "30 10 499 (552, 7200) (53, 7200) True\n",
+      "30 20 401 (552, 7200) (151, 7200) True\n",
+      "30 30 295 (552, 7200) (257, 7200) True\n"
      ]
     },
     {
@@ -94,30 +102,32 @@
     "# mins_cut = 30\n",
     "# nan_percentage_threshold = 30\n",
     "\n",
-    "\n",
-    "fig, ax = plt.subplots(1,1, figsize=(10, 10))\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(10, 10))\n",
     "nan_percentage_thresholds = [5, 10, 20, 30]\n",
     "for mins_cut in [15, 20, 30]:\n",
     "    results = []\n",
     "    for nan_percentage_threshold in nan_percentage_thresholds:\n",
-    "        cut_fhr = fhr.copy().iloc[:, -mins_cut*60*4:]\n",
+    "        cut_fhr = fhr.copy().iloc[:, -mins_cut * 60 * 4:]\n",
     "        fhr_nans_percent = (cut_fhr.isna().sum(axis=1) / cut_fhr.shape[1] * 100)\n",
     "        fhr_now_dismissed = fhr_nans_percent.index[fhr_nans_percent > nan_percentage_threshold].to_list()\n",
     "\n",
-    "        cut_uc = uc.copy().iloc[:, -mins_cut*60*4:]\n",
+    "        cut_uc = uc.copy().iloc[:, -mins_cut * 60 * 4:]\n",
     "        uc_nans_percent = (cut_uc.isna().sum(axis=1) / cut_fhr.shape[1] * 100)\n",
     "        uc_now_dismissed = uc_nans_percent.index[uc_nans_percent > nan_percentage_threshold].to_list()\n",
     "\n",
     "        removed = list(set(fhr_now_dismissed).union(set(uc_now_dismissed)))\n",
+    "\n",
     "        check_list = [x for x in before_dismissed if (x not in fhr_now_dismissed) and (x not in uc_now_dismissed)]\n",
-    "        print(f\"{mins_cut} {nan_percentage_threshold} {len(removed)} {len(check_list) == 0}\")\n",
+    "        print(\n",
+    "            f\"{mins_cut} {nan_percentage_threshold} {len(removed)} {cut_fhr.shape} {cut_fhr.drop(removed).shape} {len(check_list) == 0}\")\n",
     "        results.append(len(removed))\n",
     "    ax.plot(nan_percentage_thresholds, results, '*-', label=f\"{mins_cut} mins\")\n",
     "ax.legend()\n",
     "ax.set_ylabel('Removed curves')\n",
     "ax.set_xlabel('%NaNs min')\n",
     "# ax.set_yscale('log')\n",
-    "fig.tight_layout()"
+    "fig.tight_layout()\n",
+    "plt.savefig(f\"filtered_curves.pdf\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -128,18 +138,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "outputs": [
     {
      "data": {
-      "text/plain": "506"
+      "text/plain": "((257, 7200), (257, 7200))"
      },
-     "execution_count": 36,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [],
+   "source": [
+    "mins_cut = 30\n",
+    "nan_percentage_threshold = 30\n",
+    "\n",
+    "cut_fhr = fhr.copy().iloc[:, -mins_cut * 60 * 4:]\n",
+    "fhr_nans_percent = (cut_fhr.isna().sum(axis=1) / cut_fhr.shape[1] * 100)\n",
+    "fhr_now_dismissed = fhr_nans_percent.index[fhr_nans_percent > nan_percentage_threshold].to_list()\n",
+    "\n",
+    "cut_uc = uc.copy().iloc[:, -mins_cut * 60 * 4:]\n",
+    "uc_nans_percent = (cut_uc.isna().sum(axis=1) / cut_fhr.shape[1] * 100)\n",
+    "uc_now_dismissed = uc_nans_percent.index[uc_nans_percent > nan_percentage_threshold].to_list()\n",
+    "\n",
+    "\n",
+    "removed = list(set(fhr_now_dismissed).union(set(uc_now_dismissed)))\n",
+    "\n",
+    "clean_fhr = cut_fhr.drop(removed)\n",
+    "clean_uc = cut_uc.drop(removed)\n",
+    "clean_fhr.shape, clean_uc.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/257 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "6844555ebd504d6791b192b053f47b0d"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "         -1199     -1198     -1197     -1196     -1195     -1194     -1193  \\\n1008 -0.027218 -0.027350 -0.027450 -0.027376 -0.027243 -0.026799 -0.026282   \n1011 -0.031679 -0.032592 -0.033147 -0.033720 -0.033770 -0.033200 -0.031955   \n1012 -0.081252 -0.082587 -0.083860 -0.084978 -0.086131 -0.087201 -0.088620   \n1018  0.147230  0.147562  0.148149  0.149600  0.150158  0.151066  0.151505   \n1020 -0.054537 -0.057466 -0.060471 -0.063406 -0.066573 -0.069506 -0.072400   \n...        ...       ...       ...       ...       ...       ...       ...   \n2041  0.112279  0.108199  0.104078  0.099634  0.095342  0.091268  0.087211   \n2042 -0.000738  0.002091  0.004137  0.006256  0.008269  0.009779  0.012041   \n2043  0.123914  0.121661  0.118638  0.115165  0.111689  0.108751  0.105708   \n2044 -0.022633 -0.022700 -0.023905 -0.024814 -0.026762 -0.027899 -0.028969   \n2045 -0.011413 -0.012241 -0.013866 -0.016032 -0.018607 -0.021656 -0.024765   \n\n         -1192     -1191     -1190  ...      1190      1191      1192  \\\n1008 -0.025606 -0.024953 -0.024232  ... -0.447103 -0.446072 -0.444980   \n1011 -0.030639 -0.029292 -0.027882  ... -0.097333 -0.094022 -0.090596   \n1012 -0.090377 -0.092559 -0.094490  ... -0.106782 -0.107614 -0.108310   \n1018  0.152044  0.152471  0.152992  ... -0.139580 -0.139952 -0.140761   \n1020 -0.075397 -0.078185 -0.081130  ... -0.009317 -0.010331 -0.010540   \n...        ...       ...       ...  ...       ...       ...       ...   \n2041  0.082954  0.078658  0.074261  ... -0.013257 -0.014824 -0.016330   \n2042  0.013751  0.016146  0.017815  ... -0.160555 -0.162530 -0.164358   \n2043  0.102952  0.098659  0.095087  ... -0.142478 -0.142444 -0.142659   \n2044 -0.030256 -0.031453 -0.032864  ...  0.041772  0.043260  0.044041   \n2045 -0.028460 -0.032039 -0.036025  ...  0.228111  0.228232  0.228254   \n\n          1193      1194      1195      1196      1197      1198      1199  \n1008 -0.444201 -0.443296 -0.442431 -0.441648 -0.440916 -0.440144 -0.439561  \n1011 -0.087206 -0.083688 -0.080219 -0.076717 -0.073410 -0.070142 -0.067485  \n1012 -0.109056 -0.110060 -0.110531 -0.111074 -0.111211 -0.111114 -0.110515  \n1018 -0.141679 -0.142533 -0.143845 -0.145525 -0.147182 -0.148347 -0.150240  \n1020 -0.009947 -0.010436 -0.010994 -0.012442 -0.014626 -0.015909 -0.017865  \n...        ...       ...       ...       ...       ...       ...       ...  \n2041 -0.017793 -0.019227 -0.020628 -0.021961 -0.023201 -0.024357 -0.025430  \n2042 -0.165887 -0.167516 -0.169220 -0.170950 -0.172518 -0.174011 -0.175446  \n2043 -0.143299 -0.142871 -0.142850 -0.142266 -0.142161 -0.141798 -0.141701  \n2044  0.045306  0.045280  0.044637  0.043725  0.042310  0.041209  0.040715  \n2045  0.228124  0.227987  0.227733  0.227119  0.226587  0.225682  0.224665  \n\n[257 rows x 2399 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>-1199</th>\n      <th>-1198</th>\n      <th>-1197</th>\n      <th>-1196</th>\n      <th>-1195</th>\n      <th>-1194</th>\n      <th>-1193</th>\n      <th>-1192</th>\n      <th>-1191</th>\n      <th>-1190</th>\n      <th>...</th>\n      <th>1190</th>\n      <th>1191</th>\n      <th>1192</th>\n      <th>1193</th>\n      <th>1194</th>\n      <th>1195</th>\n      <th>1196</th>\n      <th>1197</th>\n      <th>1198</th>\n      <th>1199</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1008</th>\n      <td>-0.027218</td>\n      <td>-0.027350</td>\n      <td>-0.027450</td>\n      <td>-0.027376</td>\n      <td>-0.027243</td>\n      <td>-0.026799</td>\n      <td>-0.026282</td>\n      <td>-0.025606</td>\n      <td>-0.024953</td>\n      <td>-0.024232</td>\n      <td>...</td>\n      <td>-0.447103</td>\n      <td>-0.446072</td>\n      <td>-0.444980</td>\n      <td>-0.444201</td>\n      <td>-0.443296</td>\n      <td>-0.442431</td>\n      <td>-0.441648</td>\n      <td>-0.440916</td>\n      <td>-0.440144</td>\n      <td>-0.439561</td>\n    </tr>\n    <tr>\n      <th>1011</th>\n      <td>-0.031679</td>\n      <td>-0.032592</td>\n      <td>-0.033147</td>\n      <td>-0.033720</td>\n      <td>-0.033770</td>\n      <td>-0.033200</td>\n      <td>-0.031955</td>\n      <td>-0.030639</td>\n      <td>-0.029292</td>\n      <td>-0.027882</td>\n      <td>...</td>\n      <td>-0.097333</td>\n      <td>-0.094022</td>\n      <td>-0.090596</td>\n      <td>-0.087206</td>\n      <td>-0.083688</td>\n      <td>-0.080219</td>\n      <td>-0.076717</td>\n      <td>-0.073410</td>\n      <td>-0.070142</td>\n      <td>-0.067485</td>\n    </tr>\n    <tr>\n      <th>1012</th>\n      <td>-0.081252</td>\n      <td>-0.082587</td>\n      <td>-0.083860</td>\n      <td>-0.084978</td>\n      <td>-0.086131</td>\n      <td>-0.087201</td>\n      <td>-0.088620</td>\n      <td>-0.090377</td>\n      <td>-0.092559</td>\n      <td>-0.094490</td>\n      <td>...</td>\n      <td>-0.106782</td>\n      <td>-0.107614</td>\n      <td>-0.108310</td>\n      <td>-0.109056</td>\n      <td>-0.110060</td>\n      <td>-0.110531</td>\n      <td>-0.111074</td>\n      <td>-0.111211</td>\n      <td>-0.111114</td>\n      <td>-0.110515</td>\n    </tr>\n    <tr>\n      <th>1018</th>\n      <td>0.147230</td>\n      <td>0.147562</td>\n      <td>0.148149</td>\n      <td>0.149600</td>\n      <td>0.150158</td>\n      <td>0.151066</td>\n      <td>0.151505</td>\n      <td>0.152044</td>\n      <td>0.152471</td>\n      <td>0.152992</td>\n      <td>...</td>\n      <td>-0.139580</td>\n      <td>-0.139952</td>\n      <td>-0.140761</td>\n      <td>-0.141679</td>\n      <td>-0.142533</td>\n      <td>-0.143845</td>\n      <td>-0.145525</td>\n      <td>-0.147182</td>\n      <td>-0.148347</td>\n      <td>-0.150240</td>\n    </tr>\n    <tr>\n      <th>1020</th>\n      <td>-0.054537</td>\n      <td>-0.057466</td>\n      <td>-0.060471</td>\n      <td>-0.063406</td>\n      <td>-0.066573</td>\n      <td>-0.069506</td>\n      <td>-0.072400</td>\n      <td>-0.075397</td>\n      <td>-0.078185</td>\n      <td>-0.081130</td>\n      <td>...</td>\n      <td>-0.009317</td>\n      <td>-0.010331</td>\n      <td>-0.010540</td>\n      <td>-0.009947</td>\n      <td>-0.010436</td>\n      <td>-0.010994</td>\n      <td>-0.012442</td>\n      <td>-0.014626</td>\n      <td>-0.015909</td>\n      <td>-0.017865</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2041</th>\n      <td>0.112279</td>\n      <td>0.108199</td>\n      <td>0.104078</td>\n      <td>0.099634</td>\n      <td>0.095342</td>\n      <td>0.091268</td>\n      <td>0.087211</td>\n      <td>0.082954</td>\n      <td>0.078658</td>\n      <td>0.074261</td>\n      <td>...</td>\n      <td>-0.013257</td>\n      <td>-0.014824</td>\n      <td>-0.016330</td>\n      <td>-0.017793</td>\n      <td>-0.019227</td>\n      <td>-0.020628</td>\n      <td>-0.021961</td>\n      <td>-0.023201</td>\n      <td>-0.024357</td>\n      <td>-0.025430</td>\n    </tr>\n    <tr>\n      <th>2042</th>\n      <td>-0.000738</td>\n      <td>0.002091</td>\n      <td>0.004137</td>\n      <td>0.006256</td>\n      <td>0.008269</td>\n      <td>0.009779</td>\n      <td>0.012041</td>\n      <td>0.013751</td>\n      <td>0.016146</td>\n      <td>0.017815</td>\n      <td>...</td>\n      <td>-0.160555</td>\n      <td>-0.162530</td>\n      <td>-0.164358</td>\n      <td>-0.165887</td>\n      <td>-0.167516</td>\n      <td>-0.169220</td>\n      <td>-0.170950</td>\n      <td>-0.172518</td>\n      <td>-0.174011</td>\n      <td>-0.175446</td>\n    </tr>\n    <tr>\n      <th>2043</th>\n      <td>0.123914</td>\n      <td>0.121661</td>\n      <td>0.118638</td>\n      <td>0.115165</td>\n      <td>0.111689</td>\n      <td>0.108751</td>\n      <td>0.105708</td>\n      <td>0.102952</td>\n      <td>0.098659</td>\n      <td>0.095087</td>\n      <td>...</td>\n      <td>-0.142478</td>\n      <td>-0.142444</td>\n      <td>-0.142659</td>\n      <td>-0.143299</td>\n      <td>-0.142871</td>\n      <td>-0.142850</td>\n      <td>-0.142266</td>\n      <td>-0.142161</td>\n      <td>-0.141798</td>\n      <td>-0.141701</td>\n    </tr>\n    <tr>\n      <th>2044</th>\n      <td>-0.022633</td>\n      <td>-0.022700</td>\n      <td>-0.023905</td>\n      <td>-0.024814</td>\n      <td>-0.026762</td>\n      <td>-0.027899</td>\n      <td>-0.028969</td>\n      <td>-0.030256</td>\n      <td>-0.031453</td>\n      <td>-0.032864</td>\n      <td>...</td>\n      <td>0.041772</td>\n      <td>0.043260</td>\n      <td>0.044041</td>\n      <td>0.045306</td>\n      <td>0.045280</td>\n      <td>0.044637</td>\n      <td>0.043725</td>\n      <td>0.042310</td>\n      <td>0.041209</td>\n      <td>0.040715</td>\n    </tr>\n    <tr>\n      <th>2045</th>\n      <td>-0.011413</td>\n      <td>-0.012241</td>\n      <td>-0.013866</td>\n      <td>-0.016032</td>\n      <td>-0.018607</td>\n      <td>-0.021656</td>\n      <td>-0.024765</td>\n      <td>-0.028460</td>\n      <td>-0.032039</td>\n      <td>-0.036025</td>\n      <td>...</td>\n      <td>0.228111</td>\n      <td>0.228232</td>\n      <td>0.228254</td>\n      <td>0.228124</td>\n      <td>0.227987</td>\n      <td>0.227733</td>\n      <td>0.227119</td>\n      <td>0.226587</td>\n      <td>0.225682</td>\n      <td>0.224665</td>\n    </tr>\n  </tbody>\n</table>\n<p>257 rows × 2399 columns</p>\n</div>"
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cc_data = dict()\n",
+    "lags = t_utils.calc_lags(minutes=5)\n",
+    "\n",
+    "for (idx_fhr, fhr_row), (idx_uc, uc_row) in tqdm(zip(clean_fhr.copy().iterrows(), clean_uc.copy().iterrows()), total=len(clean_uc)):\n",
+    "    fhr_signal = pd.Series(fhr_row.values)\n",
+    "    uc_signal = pd.Series(uc_row.values)\n",
+    "\n",
+    "    cc_data[idx_fhr] = joblib.Parallel(n_jobs=8)(\n",
+    "        joblib.delayed(t_utils.cc)(fhr_signal, uc_signal, lag, 520) for lag in lags\n",
+    "    )\n",
+    "cc_df = pd.DataFrame(cc_data).T\n",
+    "cc_df.columns = lags\n",
+    "cc_df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Int64Index([], dtype='int64')"
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bad_idx = cc_df.index[cc_df.isna().sum(axis=1) != 0]\n",
+    "bad_idx"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
